Thu Feb  5 03:55:22 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (LOCALTIME): should call tzset() before localtime_r().
	  [ruby-dev:37896]

Wed Feb  4 11:45:06 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/mkexports.rb: shouldn't export DllMain.
	  reported at http://pc11.2ch.net/test/read.cgi/tech/1233686068/21

Wed Feb  4 10:12:05 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* missing/vsnprintf.c (BSD_vfprintf): should support 't' format
	  modifier to handle PRIdPTRDIFF.  thanks for the info from
	  Kazuhiro NISHIYAMA.  [ruby-core:21807]

Tue Feb  3 23:37:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): resets EOF flag after parse.

Tue Feb  3 14:12:10 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: validate data before sending to a server.
	  [ruby-core:20320]

Tue Feb  3 12:09:08 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (hmac_md5): should use String#ord to get ascii
	  code from the one-character string.

Mon Feb  2 17:05:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_find_file_ext): should not be infected from other
	  load paths.

Sat Jan 31 19:09:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_require_safe): raises when the path to be loaded is
	  tainted.  [ruby-dev:37843]

Mon Feb  2 08:12:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/xmlrpc/server.rb (Server#serve): gets rid of hardcoded
	  platform names. (win64 support)

	* lib/resolv.rb (Resolv::Hosts::DefaultFileName),
	  (Resolv::DNS::Config.default_config_hash): tries win32/resolv on
	  mswin64 too. (win64 support)

	* lib/rubygems/specification.rb (Gem::Specification#ruby_code):
	  aded mswin64. (win64 support)

	* lib/drb/extservm.rb (DRb::ExtServManager#invoke_service_command):
	  spawn is better to start a process in background.

	* ext/extmk.rb: uses FNM_SYSCASE. (win64 support)

	* instruby.rb: installs win32.h on mswin64 platform. (win64 support)